--- a/style.css
+++ b/style.css
@@ -299,6 +299,7 @@ input[type="checkbox"].toggle:checked + label::after{
     }
     .main-game {
         height: 50vh;
+        background-color: #300000;
         top: 40%;
         
     }
