--- a/style.css
+++ b/style.css
@@ -318,5 +318,8 @@ input[type="checkbox"].toggle:checked + label::after{
     #highscore-text {
         display: none;
     }
+    .title{
+        transform: translate(-50%,-25%);
+    }
 
 }
